tests/paczka1/fuzzy1/44394193.err
Error in line 8: BjH S507 21,7
Error in line 10: p66J75 S507 30,8
Error in line 20: BjH A709 13,4
Error in line 26: z8ty S507 74,7
Error in line 28: z8ty A709 42,9
